<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/mLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/mImageBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/ic_actionbar_back" />

        <ABS_CUSTOM_VIEW.TextViewSemiBold
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAllCaps="true"
            android:text="@string/mTextTitle_profile"
            android:textColor="@color/white"
            android:textSize="25dp" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/mImgForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/forgot_password" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_below="@+id/mImgForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">


        <ABS_CUSTOM_VIEW.TextViewBold
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/mText_forgot_your_password"
            android:textColor="@color/white"
            android:textSize="50dp" />

        <ABS_CUSTOM_VIEW.TextViewSemiBold
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/mTextTitle_email_text"
            android:textColor="@color/white"
            android:textSize="40dp" />



        <ABS_CUSTOM_VIEW.EditTextRegular
            android:layout_marginTop="30dp"
            android:id="@+id/mEditEmailAddress"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/rounded_corner_forget_edittext"
            android:inputType="textEmailAddress"
            android:hint="@string/mEditHint_email"
            android:padding="20dp"
            android:textSize="25dp"
            android:textColor="@color/abs_text_color_blacktuch"
            android:textColorHint="@color/abs_text_color_blacktuch"/>


        <RelativeLayout
            android:layout_marginTop="200dp"
            android:paddingRight="80dp"
            android:paddingLeft="80dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:id="@+id/mLayoutSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rounded_corner_forget_button">

            <ABS_CUSTOM_VIEW.TextViewSemiBold
                android:id="@+id/mTextNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mTextTitle_submit"
                android:textColor="@color/white"
                android:textSize="30dp" />
        </RelativeLayout>





    </LinearLayout>


</RelativeLayout>
